# doc_classify

./: .gitignore  README.md  install.sh  pyproject.toml  release.sh  set-mode-dev.zsh  set-mode-prod.zsh
.github/: copilot-instructions.md
.specify/: feature.json  init-options.json  integration.json
.specify/extensions/: .registry
.specify/integrations/: copilot.manifest.json  speckit.manifest.json
.specify/memory/: constitution.md
.specify/workflows/: workflow-registry.json
scripts/: release.sh  release.zsh  set-mode-dev.zsh  set-mode-prod.zsh
specs/001-console-app-frame/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/001-console-app-frame/checklists/: requirements.md
specs/001-console-app-frame/contracts/: cli-contract.md
specs/002-config-system/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-config-system/checklists/: requirements.md
src/doc_classify/: __init__.py  cli.py
src/doc_classify/config/: __init__.py  _defaults.py  _exceptions.py  _mode.py  _paths.py  _permanent.py  _user.py  _validation.py
tests/: __init__.py  test_cli.py
tests/test_config/: __init__.py  test_integration.py  test_mode.py  test_paths.py  test_permanent.py  test_scripts.py  test_user.py  test_validation.py
