[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "doc-classify"
version = "0.1.0"
description = "Document classification CLI tool"
requires-python = ">=3.14"
dependencies = [
    "click>=8.1",
]

[project.scripts]
doc-classify = "doc_classify.cli:main"

[dependency-groups]
dev = [
    "ruff",
    "pytest",
]

[tool.hatch.build.targets.wheel]
packages = ["src/doc_classify"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = ["COM812"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["S101", "PLR2004"]

[tool.ruff.lint.pydocstyle]
convention = "google"
